Fix spacing on title

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -115,6 +115,7 @@ header {
     letter-spacing: 0;
     line-height: 1.5;
     margin-top: 10px;
+    max-width: 100%;
 
     @media only screen and (min-width: 1220px) {
       font-size: 18px;
